# GOL

./: CMakeLists.txt  README.md
include/: BOARD.h  GOL.h  Util.hpp
src/: GOL.cpp  main.cpp
